# ted

./: README.txt  TODO.md  TODO.txt  stack.yaml  ted.cabal
src/Ted/: Editor.hs  Main1.hs  Util.hs
src/Ted/Editor/: Common.hs  Cursor.hs  Event.hs  Interaction.hs  TextBuffer.hs  View.hs
src/Ted/Editor/TextBuffer/: String.hs
src/Ted/Fancy/: Colours.hs
src/Ted/FrontEnd/: Glfw.hs
src/Ted/FrontEnd/Draw/: Simple.hs
